--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,2 +1,6 @@
+[package]
+name = "FirstWebApp" # the name of the package
+version = "1.0.0"    # the current version, obeying semver
+authors = ["Finch <nemeth.csaba.tibor@gmail.com>"]
 [dependencies]
 rocket = "0.5.0-rc.2"
