--- a/.github/workflows/image_builder.yaml
+++ b/.github/workflows/image_builder.yaml
@@ -39,11 +39,12 @@ jobs:
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
-      - name: Build and push Docker image
+      - name: Build and push ARM32 Docker image
         id: build-and-push
         uses: docker/build-push-action@v3
         with:
           context: .
-          platforms: linux/amd64
+          file: Dockerfile.armv7
+          platforms: linux/arm32v7
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
