--- a/Dockerfile.armv7
+++ b/Dockerfile.armv7
@@ -1,6 +1,6 @@
 FROM rust:latest as builder
 
-RUN apt update &amp;&amp; apt upgrade -y 
+RUN apt update && apt upgrade -y 
 RUN apt install -y g++-arm-linux-gnueabihf libc6-dev-armhf-cross
  
 RUN rustup target add armv7-unknown-linux-gnueabihf 
