--- a/.github/workflows/image_builder.yaml
+++ b/.github/workflows/image_builder.yaml
@@ -44,6 +44,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          platforms: linux/arm/v7,linux/amd64
+          platforms: linux/amd64
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
