--- a/.github/workflows/image_builder.yaml
+++ b/.github/workflows/image_builder.yaml
@@ -39,7 +39,7 @@ jobs:
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
-      - name: Build and push ARM32 Docker image
+      - name: Build and push Docker image
         id: build-and-push
         uses: docker/build-push-action@v3
         with:
