--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,4 @@ version = "1.0.0"    # the current version, obeying semver
 edition = "2021"
 [dependencies]
 axum = "0.6.1"
+tokio = { version = "1.17.0", features = ["full"] } # Event-driven, non-blocking I/O platform.
